fix: Refactor code structure for improved readability and maintainability

--- a/blocks/line-info/line-info.scss
+++ b/blocks/line-info/line-info.scss
@@ -1,99 +1,9 @@
-// .line-info-wrapper {
-//   position: relative;
+ 
 
-//   .container {
-//     position: relative;
-//     width: 100%;
-//     max-width: 1440px;
-//     margin: 0 auto;
-//     box-sizing: border-box;
-//   }
+.line-info-block {
+  place-items: center center;
 
-//   .line-info-image { 
-//     display: block;
-//     left: 50%;
-//     transform: translateX(-50%);
-//     position: relative;  
-
-//     img {
-//       display: block;
-//       width: 100%;
-//       height: auto;
-//       margin: 0 auto;
-//     }
-//   }
-
-//   .text-container {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     pointer-events: none;
-
-//     .text-item { 
-//       pointer-events: auto;
-//       display: flex;
-//       flex-direction: column; 
-//       width: 16.6%;
-//       max-width: 276px;
-//       background-color: red;
-
-//       .title { 
-//         margin-bottom: 8px; 
-//         width: 100%; 
-//       }
-
-//       .info { 
-//         width: 100%; 
-//       }
-
-//       /* Style 1: Text On Left & Right */
-//       &.side-left {
-//         left: -20px;
-//         align-items: flex-start;
-//         text-align: right;
-//         width: 45%;
-//         max-width: 300px;
-//         transform: translateX(-100%); 
-//       }
-
-//       &.side-right {
-//         right: -20px;
-//         align-items: flex-end;
-//         text-align: left;
-//         width: 45%;
-//         max-width: 300px;
-//         transform: translateX(100%);
-//       }
-
-//       /* Style 2: Text On Left / Right Sides */
-//       &.layout-left {
-//         left: 20px;
-//         align-items: flex-start;
-//         text-align: left;
-//         width: 45%;
-//         max-width: 300px;
-//       }
-
-//       &.layout-right {
-//         right: 20px;
-//         align-items: flex-end;
-//         text-align: right;
-//         width: 45%;
-//         max-width: 300px;
-//       }
-
-//       /* Style 3, 4, 5: Alignment modifiers */
-//       &.align-left {
-//         text-align: left;
-//       }
-
-//       &.align-right {
-//         text-align: right;
-//       }
-//     } 
-//   }
-
-    
-// }
-
+.line-info-item{
+    grid-column: 1 / -1;
+  }
+}
